--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ themesDir = "themes"
 languageCode = "en-us"
 title = "Hugo Cactus Theme"
 theme = "hugo-cactus-theme"
+publishDir = "docs"
 # Enter your tracking code to enable Google Analytics
 googleAnalytics = ""
 # Disable comments by leaving disqusShortname empty
